--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "divoid",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Revert symbiotic initialization.",
   "main": "divoid.js",
   "support": "divoid.support.js",
@@ -28,8 +28,10 @@
   "homepage": "https://github.com/volkovasystems/divoid#readme",
   "dependencies": {
     "babel-runtime": "^6.23.0",
+    "falzy": "^0.19.0",
     "kein": "^0.25.0",
-    "mrkd": "^0.4.0"
+    "mrkd": "^0.4.0",
+    "protype": "^0.21.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
