--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "divoid",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Revert symbiotic initialization.",
   "main": "divoid.deploy.js",
   "support": "divoid.support.js",
   "authors": [
-    "Richeve S. Bebedor <richeve.bebedor@gmail.com>"
+    "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -25,7 +26,7 @@
   "dependencies": {
     "falzy": "^0.19.0",
     "kein": "^0.25.0",
-    "mrkd": "^0.4.0",
+    "mrkd": "^0.5.0",
     "protype": "^0.21.0"
   }
 }
