--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "divoid",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Revert symbiotic initialization.",
   "main": "divoid.js",
   "support": "divoid.support.js",
@@ -21,6 +21,9 @@
     "divoid"
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+  "contributors": [
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/volkovasystems/divoid/issues"
@@ -30,7 +33,7 @@
     "babel-runtime": "^6.23.0",
     "falzy": "^0.19.0",
     "kein": "^0.25.0",
-    "mrkd": "^0.4.0",
+    "mrkd": "^0.5.0",
     "protype": "^0.21.0"
   },
   "devDependencies": {
@@ -39,6 +42,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
-    "webpack": "^2.5.1"
+    "webpack": "^2.6.1"
   }
 }
