--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
   "name": "divoid",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Revert symbiotic initialization.",
   "main": "divoid.deploy.js",
   "support": "divoid.support.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -24,9 +25,9 @@
     "tests"
   ],
   "dependencies": {
-    "falzy": "^0.19.0",
-    "kein": "^0.25.0",
-    "mrkd": "^0.5.0",
-    "protype": "^0.21.0"
+    "falzy": "^0.20.0",
+    "kein": "^0.26.0",
+    "mrkd": "^0.8.0",
+    "protype": "^0.22.0"
   }
 }
