--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "divoid",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Revert symbiotic initialization.",
   "main": "divoid.js",
   "support": "divoid.support.js",
@@ -33,9 +33,8 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "falzy": "^0.20.0",
-    "kein": "^0.26.0",
-    "mrkd": "^0.8.0",
-    "protype": "^0.22.0"
+    "kein": "^0.28.0",
+    "mrkd": "^0.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -43,6 +42,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
-    "webpack": "^2.6.1"
+    "webpack": "^3.2.0"
   }
 }
